# vqec

./: .gitignore  README.md  dask-rewrite.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  index.css
frontend/src/api/: client.ts  experiments.ts  registry.ts  schemas.ts  types.ts
frontend/src/app/: AppShell.tsx  Modal.tsx  TabLayout.tsx  types.ts
frontend/src/features/experiments/: store.ts
frontend/src/features/visualization/: store.ts  types.ts
frontend/src/tabs/: ExperimentCreationTab.tsx  ExperimentsTab.tsx  VisualizationTab.tsx
frontend/src/workers/: parquet.worker.ts
src/vqec/: __main__.py  dask_preload.py  worker.py
src/vqec/adapters/: circuit_constructors.py  decoders.py  noise.py  runners.py
src/vqec/cli/: main.py
src/vqec/core/: __init__.py  base.py  experiment.py  registry.py  validator.py
src/vqec/server/: config.py  database.py  main.py  utils.py
src/vqec/server/models/: db.py  schemas.py
src/vqec/server/repositories/: experiment.py
tests/: conftest.py  test_cli.py  test_entrypoints.py  test_worker.py
tests/core/: test_base_unit.py  test_experiment_unit.py  test_registry_unit.py
tests/integration/: test_e2e_distributed.py
tests/server/: test_api_endpoints.py  test_experiment.py  test_experiment_service_unit.py  test_export.py  test_export_service_unit.py  test_main.py  test_main_loops.py  test_registry.py  test_registry_service.py  test_repository.py  test_schemas.py  test_task_queue_unit.py  test_update.py  test_utils.py  test_worker.py  test_workers_unit.py
(+22 files in other folders)
