[project]
name = "vqec"
version = "0.1.0"
description = "Visualize Quantum Error Correction"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.2.6",
    "pydantic>=2.0.0",
    "pymatching>=2.4.0",
    "python-multipart>=0.0.32",
    "qec-loss>=0.1.1",
    "stim>=1.15.0",
    "tqdm>=4.67.3",
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.30.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.1.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0.1",
    "httpx>=0.28.1",
    "scikit-learn>=1.9.0",
    "xgboost>=3.3.0",
    "bokeh>=3.9.1",
    "distributed>=2026.6.0",
    "dask>=2026.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
vqec = "vqec.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "legacy-code", "data", "docs", "build", "dist"]
addopts = "-m 'not integration'"
markers = [
    "integration: spawns server/worker subprocesses and runs real simulations (heavy; excluded by default)",
]
